<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.buildmlearn.videocollection.activities.SplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/first_run_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_70" />

        <org.buildmlearn.videocollection.views.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/splash_text_margin"
            android:gravity="center_horizontal"
            android:text="@string/main_title"
            android:textColor="@color/white_secondary_text"
            android:textSize="@dimen/headline_leading" />

        <org.buildmlearn.videocollection.views.TextViewFont
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_subtitle"
            android:textColor="@color/white_secondary_text"
            android:textSize="@dimen/title" />

        <org.buildmlearn.videocollection.views.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/by"
            android:textColor="@color/white_secondary_text"
            android:textSize="@dimen/title" />

        <org.buildmlearn.videocollection.views.TextViewFont
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/anupam"
            android:textColor="@color/white_secondary_text"
            android:textSize="@dimen/title" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/splash_button_margin_top"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_input_white_48dp"
            android:text="@string/enter"
            android:textColor="@color/white_secondary_text" />

    </LinearLayout>

</RelativeLayout>
